--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@ General
 <li>
 <a href="linux/admin.html">Admin stuff</a>
 
+<li>
+<a href="linux/touchpad.html">Touchpad</a>
+
 </ul>
 <li>
 Distro related
